--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ h1{
   margin-bottom: 8px;
 }
 
+h2{
+  margin-top: 64px;
+  margin-bottom: 12px;
+}
+
 .title{
   color: #2277AA;
   font-weight: 600;
